--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,17 @@ dependencies:
   # Firebase
   firebase_core: ^3.10.0
   firebase_auth: ^5.3.4
+  cloud_firestore: ^5.5.0
+  
+  # Camera & Image
+  camera: ^0.11.0+2
+  image_picker: ^1.1.2
+  
+  # ML Kit for text recognition
+  google_mlkit_text_recognition: ^0.13.1
+  
+  # HTTP for API calls
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
