--- a/ios/Flutter/Debug.xcconfig
+++ b/ios/Flutter/Debug.xcconfig
@@ -1,1 +1,6 @@
 #include "Generated.xcconfig"
+
+#if !defined(PODS_XCCONFIG_INCLUDED)
+#include "Pods/Target Support Files/Pods-Runner/Pods-Runner.debug.xcconfig"
+#define PODS_XCCONFIG_INCLUDED
+#endif
