--- a/ios/Flutter/Release.xcconfig
+++ b/ios/Flutter/Release.xcconfig
@@ -1,1 +1,7 @@
 #include "Generated.xcconfig"
+
+#if !defined(PODS_XCCONFIG_INCLUDED)
+#include "Pods/Target Support Files/Pods-Runner/Pods-Runner.release.xcconfig"
+#include "Pods/Target Support Files/Pods-Runner/Pods-Runner.profile.xcconfig"
+#define PODS_XCCONFIG_INCLUDED
+#endif
