refactor: Remove macOS support and related configurations from the project

--- a/firebase.json
+++ b/firebase.json
@@ -14,9 +14,7 @@
           "configurations": {
             "android": "1:459352817410:android:9879e0365fda7fce9ecc1b",
             "ios": "1:459352817410:ios:8d5be0f460b62cd69ecc1b",
-            "macos": "1:459352817410:ios:8d5be0f460b62cd69ecc1b",
-            "web": "1:459352817410:web:41c725142756e5419ecc1b",
-            "windows": "1:459352817410:web:caa7d65761e423ed9ecc1b"
+            "web": "1:459352817410:web:41c725142756e5419ecc1b"
           }
         }
       }
